namespace YesChef.Domain
{
    public interface IInteractable
    {
        void Interact(PlayerHand hand);
    }
}
