@startuml architecture

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

' ─── Domain ───────────────────────────────────────────────────────────────────
package "Domain" {

  interface IIngredient {
    + ScoreValue : int
  }

  note right of IIngredient
    Concrete types are MonoBehaviours.
    Each class encodes both kind and state.
    RawMeat → CookedMeat via cooking.
    ChoppedVegetable → ChoppedVegetable (no further state).
    Type identity IS ingredient identity.
  end note

  class RawVegetable {
    + ScoreValue : int = 20
  }

  class ChoppedVegetable {
    + ScoreValue : int = 20
  }

  class RawMeat {
    + ScoreValue : int = 30
  }

  class CookedMeat {
    + ScoreValue : int = 30
  }

  class RawCheese {
    + ScoreValue : int = 10
  }

  IIngredient <|.. RawVegetable
  IIngredient <|.. ChoppedVegetable
  IIngredient <|.. RawMeat
  IIngredient <|.. CookedMeat
  IIngredient <|.. RawCheese

  class Order {
    + Pending : IReadOnlyCollection<Type>
    + Score : int
    + Receive(ingredient : IIngredient) : Order
    + IsComplete : bool
  }

  note right of Order
    Pure C# value object. Immutable.
    Receive() returns a new Order with one
    matching Type removed from Pending, and
    ScoreValue added to Score.
    Returns same instance if no match found.
    IsComplete when Pending is empty.
    Identity belongs to CustomerWindow, not Order.
  end note

  Order ..> IIngredient : receives

  class OrderFactory {
    + CreateRandom() : Order
  }

  note bottom of OrderFactory
    Holds a pool of Type objects — no instances.
    Picks 2 or 3 types at random (50/50).
    Duplicate types allowed.
  end note

  OrderFactory ..> Order : creates
}

' ─── Core ─────────────────────────────────────────────────────────────────────
package "Core" {

  enum GameState {
    Idle
    Running
    Paused
    GameOver
  }

  class GameManager {
    - state : GameState
    - countdown : float
    + StartGame() : void
    + Pause() : void
    + Resume() : void
  }

  class ScoreManager {
    + CurrentScore : int
    + HighScore : int
    + AddScore(points : int) : void
    - PersistHighScore() : void
  }

  note bottom of ScoreManager
    HighScore persisted via PlayerPrefs.
  end note

  GameManager --> GameState
  GameManager --> ScoreManager : notifies
}

' ─── Player ───────────────────────────────────────────────────────────────────
package "Player" {

  class PlayerController {
    ' New Input System: Move (Vector2), Interact (Button), Pause (Button), Cancel (Button)
    - inSelectionContext : bool
  }

  class PlayerHand {
    - held : IIngredient
    + TryPickUp(ingredient : IIngredient) : bool
    + Place() : void
    + Discard() : void
  }

  note bottom of PlayerHand
    Enforces single-item hold.
    TryPickUp returns false when occupied.
    Holds the physical ingredient entity.
  end note

  PlayerController "1" --> "1" PlayerHand : owns
}

' ─── Interactables ────────────────────────────────────────────────────────────
package "Interactables" {

  interface IInteractable {
    + Interact(hand : PlayerHand) : void
  }

  class Refrigerator {
    + Interact(hand : PlayerHand) : void
  }

  note bottom of Refrigerator
    On interact: opens RefrigeratorUI.
    Rejects interact when hand is occupied.
    Instantiates the selected ingredient prefab
    and calls hand.TryPickUp.
  end note

  class RefrigeratorUI {
    + Open() : void
    + Close() : void
    - selectedIndex : int
    + event OnIngredientSelected(ingredient : IIngredient)
    + event OnCancelled
  }

  note right of RefrigeratorUI
    World-space Canvas. 4 items: RawVegetable,
    RawMeat, RawCheese, Back.
    Move input navigates selection.
    Interact confirms. Cancel or Back item closes.
  end note

  class ChoppingTable {
    - timer : float
    - occupant : IIngredient
    + Interact(hand : PlayerHand) : void
  }

  note bottom of ChoppingTable
    Accepts RawVegetable.
    On timer complete: destroys occupant,
    instantiates ChoppedVegetable in its place.
    Blocks pickup until complete.
  end note

  class StoveSlot {
    - timer : float
    - occupant : IIngredient
    + Interact(hand : PlayerHand) : void
  }

  note bottom of StoveSlot
    Accepts RawMeat.
    On timer complete: destroys occupant,
    instantiates CookedMeat in its place.
    Timer continues while player is away.
  end note

  class Stove {
    - slots : StoveSlot[2]
    + Interact(hand : PlayerHand) : void
  }

  note bottom of Stove
    Routes interact to first free StoveSlot.
    Rejects when both slots full.
  end note

  class CustomerWindow {
    - order : Order
    - elapsed : float
    + Interact(hand : PlayerHand) : void
    + event OnOrderFulfilled(score : int)
  }

  note right of CustomerWindow
    Entity. Persists across customers.
    Owns the current Order (value object).
    On Interact: takes ingredient from hand,
    calls order.Receive() — replaces order
    with the returned instance.
    When IsComplete: fires OnOrderFulfilled,
    notifies ScoreManager, spawns new Order.
    UI reflects current Order state.
  end note

  class Trash {
    + Interact(hand : PlayerHand) : void
  }

  IInteractable <|.. Refrigerator
  IInteractable <|.. ChoppingTable
  IInteractable <|.. Stove
  IInteractable <|.. CustomerWindow
  IInteractable <|.. Trash

  Stove "1" *--> "2" StoveSlot : owns
  CustomerWindow ..> OrderFactory : uses
  CustomerWindow --> Order : holds
}

' ─── UI ───────────────────────────────────────────────────────────────────────
package "UI" {

  class HUD {
    ' Score, HighScore, countdown, pause button, quit button
  }

  class WindowUI {
    ' Displays Pending types + elapsed timer for a CustomerWindow
  }

  class StationProgressUI {
    ' Progress bar for ChoppingTable and each StoveSlot
  }

  class ScorePopup {
    ' Displays "+N" / "-N" near window then fades
  }

  class GameOverUI {
    ' Play Again button, New High Score message
  }
}

' ─── Cross-package wiring ─────────────────────────────────────────────────────
PlayerHand "1" --> "0..1" IIngredient : holds

@enduml
